<resources>
    <string name="All_Network">All Network</string>
    <string name="All_region">All Region</string>
    <string name="All_years">All Year</string>
    <string name="Earlier">Earlier</string>
    <string name="Newly_added">Newly Added</string>
    <string name="Recharge">Recharge</string>
    <string name="Release_date">Release Date</string>
    <string name="Top_rated">Top Rated</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="about_bottom">This is a decentralized online video content streaming platform where all content is uploaded by anonymous users from the internet world.</string>
    <string name="about_desc">Netfly is a decentralized online video content streaming platform where all content is uploaded by anonymous users from the internet world.</string>
    <string name="about_us">About us</string>
    <string name="account">Account</string>
    <string name="account_sn">Account/SN</string>
    <string name="acting">Acting</string>
    <string name="activation_success">Your activation was successful. It is valid until</string>
    <string name="add">Add</string>
    <string name="add_download_list">Already added to the download list.</string>
    <string name="add_email">Add Email</string>
    <string name="add_email_hint">Verify your identity by adding an email address for configuration.</string>
    <string name="add_from_internet">Add from Internet</string>
    <string name="add_internet_1">General support</string>
    <string name="add_internet_2">Easy way to import my cloud</string>
    <string name="add_internet_3">The best movie here</string>
    <string name="add_internet_4">Just one click to watch the movie now!</string>
    <string name="add_internet_5">Import cloud</string>
    <string name="add_like_success">Added to Favorites!</string>
    <string name="add_network_mpd">Add Network M3U8 or MPD</string>
    <string name="add_new">Add New</string>
    <string name="add_shares">Add Shares</string>
    <string name="add_smb">Add SMB</string>
    <string name="add_to_download">Added to Download List!</string>
    <string name="add_to_favorite">Added to Favorites!</string>
    <string name="add_to_my_list">Add to My List!</string>
    <string name="add_tv_source">Add TV Source</string>
    <string name="adult_series">Adult Series</string>
    <string name="ago_end">ago</string>
    <string name="ago_pre" />
    <string name="ai_sub_for">AI subtitles for</string>
    <string name="all">All</string>
    <string name="all_audio">All Language</string>
    <string name="all_channels">All Channels</string>
    <string name="all_favorite">Favorite</string>
    <string name="all_history">History</string>
    <string name="all_year">All Release Year</string>
    <string name="android_id">Android ID</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="animation">Animation</string>
    <string name="annual_vip">Annual Vip</string>
    <string name="app_name">NETFLY</string>
    <string name="app_update_btn">Update Now</string>
    <string name="app_update_content">A new version of app is available and ready to be installed.</string>
    <string name="app_update_title">Update is available!</string>
    <string name="app_version">App Version</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="appear_moment">They will appear here in a moment.</string>
    <string name="audio">Audio</string>
    <string name="audio_language">Audio Language</string>
    <string name="auto">Auto</string>
    <string name="back">Back</string>
    <string name="back_press_tip">Press the Back button to quickly return to the top</string>
    <string name="backspace">Backspace</string>
    <string name="balance">Balance:</string>
    <string name="be_patient">"We're connecting the service as quickly as possible. Please be patient."</string>
    <string name="before">Before</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="bluetooth_not_support">Bluetooth is not supported on this device.</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="brand">Brand</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="cancel">Cancel</string>
    <string name="cast_crew">Cast &amp; Crew</string>
    <string name="categories">Categories</string>
    <string name="category">Category</string>
    <string name="change_theme">change theme</string>
    <string name="channel">Channel</string>
    <string name="channel_error_1">Sorry, your current channel failed to load.</string>
    <string name="channel_error_2">Error code 458–578.</string>
    <string name="channel_list">Channel List</string>
    <string name="channel_name">Channel Name</string>
    <string name="channel_not_found">Signal source unavailable</string>
    <string name="channels">Channels</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="check_update">Check Update</string>
    <string name="check_update_complete">Check for updates completed!</string>
    <string name="children_series">"Children's Series"</string>
    <string name="choose_language">Choose your Browsing Language</string>
    <string name="choose_payment">Choose your payment method</string>
    <string name="choose_season">Choose a Season</string>
    <string name="clean">Clean</string>
    <string name="clean_channel_tip">Do you want to clean up all of history?</string>
    <string name="clean_history">Clean History</string>
    <string name="clear">Clear</string>
    <string name="clear_all_confirm">Do you want to clear all?</string>
    <string name="clear_all_favorite">Clear all favorite playlist?</string>
    <string name="clear_all_history">Clear all playback history?</string>
    <string name="clear_all_temporary_files">Clear all temporary files</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="clear_cache_tip">Clearing cache will reload data.</string>
    <string name="clear_storage">Clear Storage</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="clear_tip_finish">Clear completed</string>
    <string name="cloud">Cloud</string>
    <string name="cloud_no_content">No content</string>
    <string name="cloud_shares">Cloud Shares</string>
    <string name="cloud_storage">Cloud Storage</string>
    <string name="coming_soon">Coming soon</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="create_count">Create Account</string>
    <string name="email_account">Email</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="get_start_now_hint">Enter your credentials to access your account.</string>
    <string name="got_it">Got it</string>
    <string name="have_account">Have an account ?</string>
    <string name="locked_tip_1">Your account is locked for 24 hours because you exceeded the maximum payment password attempts (10 times in one day).</string>
    <string name="locked_tip_2">Lock expires at:</string>
    <string name="locked_tip_3">If you need urgent access, contact support@netflyapp.com.</string>
    <string name="locked_title">Account Locked Due to Password Attempts</string>
    <string name="login">Log in</string>
    <string name="login_bottom_tip">If your account is not registered, a new user registration will be conducted for you.</string>
    <string name="login_or_sign_up">Log in / Sign up</string>
    <string name="material_clock_toggle_content_description">Select AM or PM</string>
    <string name="material_timepicker_am">AM</string>
    <string name="material_timepicker_pm">PM</string>
    <string name="new_to_app">New to Netfly? Start for free</string>
    <string name="new_to_app_hint">Enter your credentials to access your account.</string>
    <string name="password">Password</string>
    <string name="reset">Reset</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_password_hint">Please enter your email and new password</string>
    <string name="sqlite_version">Database Version</string>
    <string name="update">Update</string>
    <string name="upload_logs">Upload logs</string>
</resources>