<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="@drawable/shape_radius_black3_24" android:layout_width="900.0dip" android:layout_height="680.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView android:layout_width="120.0dip" android:layout_height="120.0dip" android:layout_marginTop="68.0dip" android:src="@mipmap/icon_pay_locked" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <TextView android:textSize="32.0sp" android:textStyle="bold" android:textColor="@color/white" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="208.0dip" android:text="@string/locked_title" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <TextView android:textSize="24.0sp" android:textColor="@color/black_9" android:gravity="center" android:id="@id/tv_locked_hint_1" android:layout_width="800.0dip" android:layout_height="wrap_content" android:layout_marginTop="275.0dip" android:text="@string/locked_tip_1" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <TextView android:textSize="24.0sp" android:textColor="@color/black_9" android:gravity="center" android:id="@id/tv_locked_hint_2" android:layout_width="800.0dip" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:text="@string/locked_tip_2" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_locked_hint_1" />
    <TextView android:textSize="24.0sp" android:textColor="@color/black_9" android:gravity="center" android:id="@id/tv_locked_hint_3" android:layout_width="800.0dip" android:layout_height="wrap_content" android:text="@string/locked_tip_3" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_locked_hint_2" />
    <TextView android:textSize="28.0sp" android:textStyle="bold" android:textColor="@color/white" android:gravity="center" android:id="@id/btn_got_it" android:background="@drawable/shape_radius_red_select_44" android:focusable="true" android:focusableInTouchMode="true" android:clickable="true" android:layout_width="300.0dip" android:layout_height="100.0dip" android:layout_marginTop="85.0dip" android:text="@string/got_it" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_locked_hint_3" />
</androidx.constraintlayout.widget.ConstraintLayout>