<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="36.0sp" android:textStyle="bold" android:textColor="@color/white" android:id="@id/tv_get_start" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="234.0dip" android:text="@string/new_to_app" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <TextView android:textSize="28.0sp" android:textColor="@color/black_6" android:id="@id/login_hint" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/get_start_now_hint" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_get_start" />
    <EditText android:textSize="28.0sp" android:textColor="@color/white" android:textColorHint="@color/black_9" android:gravity="center_vertical" android:id="@id/et_account" android:background="@drawable/shape_radius_black6" android:paddingLeft="20.0dip" android:paddingRight="20.0dip" android:layout_width="600.0dip" android:layout_height="90.0dip" android:layout_marginTop="60.0dip" android:hint="@string/email_account" android:maxLines="1" android:scrollHorizontally="true" android:inputType="text" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/login_hint" />
    <EditText android:textSize="28.0sp" android:textColor="@color/white" android:textColorHint="@color/black_9" android:gravity="center_vertical" android:id="@id/et_password" android:background="@drawable/shape_radius_black6" android:paddingLeft="20.0dip" android:paddingRight="20.0dip" android:layout_width="600.0dip" android:layout_height="90.0dip" android:layout_marginTop="36.0dip" android:hint="@string/password" android:maxLines="1" android:scrollHorizontally="true" android:inputType="textPassword" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/et_account" />
    <TextView android:textSize="28.0sp" android:textColor="@color/color_red" android:ellipsize="end" android:gravity="center_vertical" android:id="@id/tv_login_error" android:visibility="gone" android:layout_width="600.0dip" android:layout_height="wrap_content" android:maxLines="1" app:layout_constraintStart_toStartOf="@id/et_password" app:layout_constraintTop_toBottomOf="@id/et_password" />
    <TextView android:textSize="30.0sp" android:textStyle="bold" android:textColor="@color/text_selector_white_white" android:gravity="center" android:id="@id/tv_login" android:background="@drawable/selector_login_button" android:focusable="true" android:focusableInTouchMode="true" android:clickable="true" android:layout_width="600.0dip" android:layout_height="90.0dip" android:layout_marginTop="36.0dip" android:text="@string/login_or_sign_up" android:includeFontPadding="false" android:textAllCaps="false" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_login_error" />
    <TextView android:textSize="26.0sp" android:textStyle="bold" android:textColor="@color/text_selector_white_main" android:gravity="center" android:id="@id/tv_forget_pwd" android:focusable="true" android:focusableInTouchMode="true" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="60.0dip" android:text="@string/forgot_password" android:includeFontPadding="false" android:textAllCaps="false" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_login" />
    <TextView android:textSize="26.0sp" android:textColor="@color/black_9" android:gravity="center" android:layout_width="680.0dip" android:layout_height="wrap_content" android:layout_marginBottom="93.0dip" android:text="@string/login_bottom_tip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>