<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.button.MaterialButtonToggleGroup android:orientation="vertical" android:id="@id/APKTOOL_DUMMYVAL_0x7f0b0d3b" android:background="?APKTOOL_DUMMYVAL_0x7f040139" android:visibility="gone" android:layout_width="@dimen/APKTOOL_DUMMYVAL_0x7f070a53" android:layout_height="@dimen/APKTOOL_DUMMYVAL_0x7f070a51" android:contentDescription="@string/material_clock_toggle_content_description" android:layout_marginStart="@dimen/APKTOOL_DUMMYVAL_0x7f070a52" app:APKTOOL_DUMMYVAL_0x7f0400cb="@null" app:APKTOOL_DUMMYVAL_0x7f0402e4="@id/APKTOOL_DUMMYVAL_0x7f0b0d36" app:APKTOOL_DUMMYVAL_0x7f0402e9="0" app:APKTOOL_DUMMYVAL_0x7f040492="true" app:APKTOOL_DUMMYVAL_0x7f0405cd="true"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.button.MaterialButton android:id="@null" android:layout_width="wrap_content" android:text="@string/material_timepicker_am" android:insetTop="8.0dip" app:APKTOOL_DUMMYVAL_0x7f04049d="?APKTOOL_DUMMYVAL_0x7f04049c" style="?APKTOOL_DUMMYVAL_0x7f040384" />
    <com.google.android.material.button.MaterialButton android:id="@null" android:layout_width="wrap_content" android:text="@string/material_timepicker_pm" android:insetBottom="8.0dip" app:APKTOOL_DUMMYVAL_0x7f04049d="?APKTOOL_DUMMYVAL_0x7f04049c" style="?APKTOOL_DUMMYVAL_0x7f040384" />
</com.google.android.material.button.MaterialButtonToggleGroup>
