<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView android:id="@id/iv_about_logo" android:layout_width="0.0dip" android:layout_height="186.0dip" android:src="@mipmap/about_bg" android:scaleType="fitXY" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout android:id="@id/layout_sqlite_version" android:background="@drawable/selector_normal" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:focusable="true" android:focusableInTouchMode="true" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="220.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
        <TextView android:textSize="32.0sp" android:textColor="@color/white" android:id="@id/pre_sqlite_version" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sqlite_version" />
        <TextView android:textSize="32.0sp" android:textColor="@color/white" android:id="@id/tv_sqlite_version" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginStart="20.0dip" />
    </LinearLayout>
    <LinearLayout android:id="@id/layout_app_version" android:background="@drawable/selector_normal" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:focusable="true" android:focusableInTouchMode="true" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/layout_sqlite_version">
        <TextView android:textSize="32.0sp" android:textColor="@color/white" android:id="@id/pre_app_version_2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_version" />
        <TextView android:textSize="32.0sp" android:textColor="@color/white" android:id="@id/tv_app_version_2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginStart="20.0dip" app:layout_constraintStart_toEndOf="@id/pre_app_version_2" app:layout_constraintTop_toBottomOf="@id/setting_logo" />
    </LinearLayout>
    <LinearLayout android:id="@id/layout_update" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/layout_app_version">
        <TextView android:textSize="32.0sp" android:textColor="@color/white" android:gravity="center" android:id="@id/tv_update" android:background="@drawable/selector_red_666_12" android:focusable="true" android:focusableInTouchMode="true" android:clickable="true" android:layout_width="250.0dip" android:layout_height="90.0dip" android:text="@string/update" />
        <TextView android:textSize="32.0sp" android:textColor="@color/white" android:gravity="center" android:id="@id/tv_upload_log" android:background="@drawable/selector_red_666_12" android:focusable="true" android:focusableInTouchMode="true" android:clickable="true" android:layout_width="250.0dip" android:layout_height="90.0dip" android:text="@string/upload_logs" android:layout_marginStart="30.0dip" />
    </LinearLayout>
    <TextView android:textSize="22.0sp" android:textColor="@color/black_9" android:id="@id/tv_android_id" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="28.0dip" android:text="@string/android_id" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/layout_update" />
    <TextView android:textSize="24.0sp" android:textColor="@color/black_6" android:gravity="center" android:id="@id/tv_about_desc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="60.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="60.0dip" android:layout_marginBottom="80.0dip" android:text="@string/about_desc" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_android_id" />
</androidx.constraintlayout.widget.ConstraintLayout>